@@ -4,10 +4,10 @@ import java.security.NoSuchAlgorithmException;
 import java.security.spec.InvalidKeySpecException;
 
 import javax.crypto.spec.SecretKeySpec;
+import javax.xml.bind.DatatypeConverter;
 
 import com.sjwi.meals.model.AccessTokenResponse;
 
-import org.apache.tomcat.util.codec.binary.Base64;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
@@ -26,7 +26,7 @@ public class JwtManager {
 
   public String getUnpackedAccessToken(AccessTokenResponse response) throws NoSuchAlgorithmException, ExpiredJwtException, UnsupportedJwtException, MalformedJwtException, SignatureException, IllegalArgumentException, InvalidKeySpecException {
     SignatureAlgorithm sa = SignatureAlgorithm.RS256;
-    SecretKeySpec secretKeySpec = new SecretKeySpec(Base64.decodeBase64(clientSecret), sa.getJcaName());
+    SecretKeySpec secretKeySpec = new SecretKeySpec(DatatypeConverter.parseBase64Binary(clientSecret), sa.getJcaName());
     return Jwts.parser().setSigningKey(secretKeySpec).parseClaimsJws(response.getAccess_token()).getBody().toString();
   }
   
